Fix: Add aria-label on h1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   <script src="clock.js" defer></script>
 </head>
 <body>
-  <h1 class="clock">00:00:00 AM</h1>
+  <h1 class="clock" aria-label="디지털 시계"></h1>
 </body>
 </html>
