Feat: worldTime function

--- a/index.html
+++ b/index.html
@@ -5,10 +5,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
-  <title>Document</title>
+  <title>Digital Clock</title>
   <script src="clock.js" defer></script>
 </head>
 <body>
   <h1 class="clock" aria-label="디지털 시계"></h1>
+  <select class="country" name="" id="">
+    <option value="seoul">서울, 한국</option>
+    <option value="washington">Washington D.C, U.S.A</option>
+    <option value="saopaulo">São Paulo, Brasil</option>
+    <option value="london">London, England</option>
+    <option value="cairo">القاهرة, Egypt</option>
+    <option value="beijing">Běijīng, China</option>
+    <option value="bangkok">กรุงเทพมหานคร, Tailand</option>
+    <option value="paris">Paris, France</option>
+    <option value="sydney">Sydney, Austraila</option>
+  </select>
 </body>
 </html>
