--- a/index.html
+++ b/index.html
@@ -21,5 +21,12 @@
     <option value="paris">Paris, France</option>
     <option value="sydney">Sydney, Austraila</option>
   </select>
+  <!-- Go to www.addthis.com/dashboard to customize your tools -->
+  <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63b28775481168cd"></script>
+  <ins class="kakao_ad_area" style="display:none;"
+  data-ad-unit = "DAN-uzRnGPkH9VLfVZJA"
+  data-ad-width = "320"
+  data-ad-height = "100"></ins>
+  <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 </body>
 </html>
