Feat: add kakao adfit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   </select>
   <!-- Go to www.addthis.com/dashboard to customize your tools -->
   <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-63b28775481168cd"></script>
+  <!-- kakao adfit -->
   <ins class="kakao_ad_area" style="display:none;"
   data-ad-unit = "DAN-uzRnGPkH9VLfVZJA"
   data-ad-width = "320"
