Fix: HTML & CSS Restructuring

--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <title>Document</title>
+  <script src="draggableImg.js" defer></script>
 </head>
 <body>
+  <div class="slider-container">
     <div class="slider">
-        <div class="slider-wrapper">
-          <div class="slider-item"><img src="./src/alone.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/desert.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/jordan1.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/londonStreet.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/mistake.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/river.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/scottJordan.jpg" alt="" /></div>
-          <div class="slider-item"><img src="./src/travisScott.jpg" alt="" /></div>
-        </div>
-        <button class="move prev-button">&#60;</button>
-        <button class="move next-button">&#62;</button>
+      <ul class="slider-item-wrapper">
+      </ul>
     </div>
+    <div class="button-wrapper">
+      <button class="move prev-button">&#60;</button>
+      <button class="move next-button">&#62;</button>
+    </div>
+  </div>
 </body>
 </html>
